# NoPasaNadaPE-Server

./: .gitignore  brevete_manual.py  calmul_manual.py  client_api.py  erase.py  erase2.py  erase4.py  erase7.py  gogo.py  main.py  prueba_un_scraper_no_headless.py  pyproject.toml  requirements.txt  satimp_manual.py  scrape_sbs.py  servicios2.py  soat_manual.py  sunarp_manual_client.py  sutran_manual.py  test_proxy.py  test_scrapers.py
static/: cuenta-mis-vencimientos.js  dashboard.css  data_pruebas.json  ui-cuenta-style.css
templates/: !comms-codigo.html  !comms-regular-Ago-25.html  !comms-regular-Oct-25.html  !comms-regular.html  !servicios_test.html  !ui-landing-maquinarias.html  !ui-login.html  !ui-maquinarias-mi-cuenta-old.html  !ui-pagina-base.html  !ui-politica-de-privacidad.html  !ui-recuperar-3.html  !ui-registro-2.html  comms-alerta.html  comms-anulacion.html  comms-bienvenida.html  comms-interno-informe-diario.html  comms-interno-informe-scrapers.html  comms-invitacion01.html  comms-maquinarias-activacion.html  comms-maquinarias-alerta.html  comms-maquinarias-boletin copy.html  comms-maquinarias-boletin-old.html  comms-maquinarias-boletin.html  comms-maquinarias-confirmacion-cambio-contrasena.html  comms-maquinarias-desactivacion.html  comms-maquinarias-eliminacion.html  comms-maquinarias-inscripcion.html  comms-maquinarias-recuperacion-contrasena.html  comms-regular.html  cuenta-mis-datos.html  cuenta-mis-vencimientos.html  dashboard.html  docs-api-v1.html  servicios_test.html  ui-documentacion-api-v1.html  ui-landing-maquinarias.html  ui-login.html  (+20 more)
(+170 files in other folders)
